# wasm-ar-rust

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.sh  index.html
assets/: image_detect_mozaic_wasm_bg-WBHxUbMu.wasm  image_detect_mozaic_wasm_bg-lOI9oLY-.wasm  index-82Yme-4m.js  index-BK1daRvv.js  index-BRs32bdL.js  index-BUooM1ds.css  index-CxmejRrF.css  index-D0ef21et.js  index-D4b2IyGO.js  index-DKGv7fnl.js  index-DVlIBf9Q.css  index-DZiqw8dQ.js  index-Dr1_Q_EU.js  index-DsATkClz.css  index-DyHlDGo8.js  index-RAO_eNUq.js  index-RSNNXrBJ.js
crates/ar-wasm/: Cargo.toml  Makefile  README.md
crates/ar-wasm/src/: lib.rs
crates/canvas-wasm/: Cargo.toml
crates/canvas-wasm/src/: ball.rs  build.rs  lib.rs  three.rs
crates/image-apps/: .gitignore  Cargo.toml  Makefile
crates/image-apps/src/: main.rs
crates/image-detect-effect-wasm/: Cargo.toml
crates/image-detect-effect-wasm/src/: lib.rs
crates/image-detect-mozaic-wasm/: Cargo.toml
crates/image-detect-mozaic-wasm/src/: build.rs  effect.rs  lib.rs
crates/image-detection-apps/: .gitignore  Cargo.toml  Makefile
crates/image-detection-apps/src/: main.rs
crates/image-detection-wasm/: Cargo.toml  Makefile
crates/image-detection-wasm/src/: lib.rs
crates/image-effect-wasm/: Cargo.toml
crates/image-effect-wasm/src/: lib.rs
crates/image-wasm/: Cargo.toml
crates/image-wasm/src/: lib.rs
crates/opencv-app/: Cargo.toml  Makefile
crates/opencv-app/src/: main.rs
crates/opencv-apps/: Cargo.toml  Makefile  build.rs
crates/opencv-apps/src/: main.rs
crates/opencv-lib/: Cargo.toml
crates/opencv-lib/src/: main.rs
crates/opencv-lib/src/cv/: converter.rs  effect.rs  grayscale.rs  loader.rs  mod.rs  saver.rs  template.rs  wasm.rs
crates/opencv-wasm/: Cargo.toml  README.md
crates/template-matching/: Cargo.toml  README.md
crates/template-matching/shaders/: matching.wgsl
crates/template-matching/src/: lib.rs
docs/: README.md
wasm-frontend/: Makefile  biome.json  index.html  package-lock.json  package.json  vite.config.ts
wasm-frontend/src/: App.svelte  app.css
wasm-frontend/src/lib/: Video.svelte
wasm-frontend/src/lib/components/: DetectionCamera.svelte  DetectionCamera2.svelte  DetectionCamera3.svelte  DetectionCamera4.svelte  EffectVideo.svelte  Help.svelte  NoWebGPU.svelte  Video.svelte  WasmCanvas.svelte
wasm-frontend/src/lib/image-libs/: index.ts
wasm-frontend/src/lib/images/: index.ts
wasm-frontend/src/lib/ua/: index.ts
