[package]
name = "ar-wasm"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
# workspace
opencv-lib = { path = "../opencv-lib" }

image = { version = "0.25", features = ["png", "jpeg"] }
opencv = { version = "0.93" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
#wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }
anyhow = "1.0"

[lints]
workspace = true
