[package]
name = "ar-wasm"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
# workspace
opencv-lib = { path = "../opencv-lib" }

opencv = { version = "0.93", features = ["clang-runtime"] }
wasm-bindgen = "0.2"
#wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
#serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }
anyhow = "1.0"

[lints]
workspace = true
