[package]
name = "canvas-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM example for drawing image on canvas form WASM using Rust and Svelte"
repository = "https://github.com/hiromaily/wasm-ar-rust"
license = "MIT"

build = "src/build.rs"

# For Apple Silicon
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"

# wasm specific
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebGlRenderingContext",
    "WebGlBuffer",
] }
js-sys = "0.3"

console_error_panic_hook = "0.1"
wee_alloc = "0.4.5"
# 3D
stl_io = "0.8"

[build-dependencies]
serde = "1.0"
serde_json = "1.0"

[profile.release]
opt-level = "z" # To create a smaller binary

[lints]
workspace = true
