[package]
name = "image-effect-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM example for Canny Edge Detection using Rust and Svelte"
repository = "https://github.com/hiromaily/wasm-ar-rust"
license = "MIT"

[package.metadata.cargo-machete]
ignored = ["web-sys"]

# For Apple Silicon
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "bmp",
] }
imageproc = "0.25"
base64 = "0.22"
# wasm specific
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "z" # To create a smaller binary

[lints]
workspace = true
