[package]
name = "opencv-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# workspace
opencv-lib = { path = "../opencv-lib" }

anyhow = "1.0"

[[bin]]
name = "app-grayscale"
path = "bin/app_grayscale.rs"

[[bin]]
name = "app-blurred"
path = "bin/app_blurred.rs"

[lints]
workspace = true

[profile.release]
panic = 'abort'
