[package]
name = "template-matching"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1"
#pollster = "0.3"
bytemuck = { version = "1.18", features = ["derive"] }
image = { version = "0.25", optional = true }
futures-intrusive = "0.5"

[dev-dependencies]
image = "0.25"
imageproc = "0.25"

[features]
default = ["image"]
image = ["dep:image"]

[lints]
workspace = true
